# gogoro-hackathon

./: .env.exmaple  .gitignore  README.md  chains.py  is_question_relevant.py  llm.py  main.py  nodes.py  pyproject.toml  react.py  samconfig.toml  schemas.py  template.yaml
.aws-sam/: build 2.toml  build.toml
frontend/: frontend.py
frontend/cdk.out/: GradioLambda.assets.json  GradioLambda.template.json  manifest.json  tree.json
frontend/cdk.out/asset.89b10755ec7b1784534e9771b0d1ef681870e1a1ab840d220cbe6454655b258f/: frontend.py
frontend/cdk.out/asset.dde7bee7beb42b69135520ac2b3ca2c72cf9fd7b9ba5ef0dd45ef866f6b581a6/: Dockerfile  cdk.json  cdk.py  frontend.py
invoke_ai/: invoke_claude3 copy.py  invoke_claude3.py  serverless.yml
invoke_ai/.serverless/: cloudformation-template-update-stack.json  requirements  serverless-state.json
markdown_split/: markdownsplit.py  md_splitter.py  serverless.yml
markdown_split/.serverless/: cloudformation-template-update-stack.json  serverless-state.json
src/: Dockerfile  pdf.py  requirements.txt
src/is_question_relevant_function/: Dockerfile  chat_history.py  is_question_relevant.py  langchain_util.py  output_util.py  requirements.txt  secret.py
utils/: dynamodb.py
