[tool.poetry]
name = "gogoro-hackathon"
version = "0.1.0"
description = ""
authors = ["sh1un <a0923183408@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "~3.11"
python-dotenv = "^1.0.1"
langchain = "^0.1.20"
langgraph = "^0.0.49"
langchain-aws = "^0.1.3"
langchainhub = "^0.1.15"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
